--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.27.2",
         "chart.js": "^3.7.1",
         "daisyui": "^2.14.3",
+        "leaflet": "^1.8.0",
         "react": "^18.1.0",
         "react-chartjs-2": "^4.1.0",
         "react-countup": "^6.2.0",
